force-app/main/default/objects/Journal_Customer__c/Journal_Customer__c.object-meta.xml
<CustomObject>
    <description>Tracks journal customers across all sales channels (Salesforce, Amazon, Etsy). Part of the Journal Business module.</description>
    <label>Journal Customer</label>
    <nameField>
        <displayFormat>CUST-{0000}</displayFormat>
        <label>Customer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>