force-app/main/default/objects/Journal_Customer__c/fields/DivergentThrive_User__c.field-meta.xml
<CustomField>
    <fullName>DivergentThrive_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DivergentThrive User</label>
    <type>Checkbox</type>
    <description>TRUE if customer also uses SafeHaven/NeuroThrive app (cross-reference for recommendations)</description>
</CustomField>