force-app/main/default/objects/Journal_Customer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <externalId>true</externalId>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
    <description>Customer email address (unique identifier)</description>
</CustomField>