force-app/main/default/objects/Journal_Customer__c/fields/Favorite_Categories__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Categories__c</fullName>
    <label>Favorite Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moon &amp; Lunar</fullName>
            </value>
            <value>
                <fullName>Wellness &amp; Mental Health</fullName>
            </value>
            <value>
                <fullName>Spiritual &amp; Witchcraft</fullName>
            </value>
            <value>
                <fullName>LGBTQIA+</fullName>
            </value>
            <value>
                <fullName>Practical Life</fullName>
            </value>
            <value>
                <fullName>Garden &amp; Homestead</fullName>
            </value>
            <value>
                <fullName>Fitness &amp; Wellness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Customer's preferred journal categories (for recommendations)</description>
</CustomField>