force-app/main/default/objects/Journal_Customer__c/fields/Journey_Status__c.field-meta.xml
<CustomField>
    <fullName>Journey_Status__c</fullName>
    <label>Journey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Welcome Sent</fullName>
            </value>
            <value>
                <fullName>First Purchase</fullName>
            </value>
            <value>
                <fullName>Repeat Customer</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Customer journey stage for email automation</description>
</CustomField>