force-app/main/default/objects/Journal_Customer__c/fields/Lifetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Value__c</fullName>
    <label>Lifetime Value</label>
    <summarizedField>Journal_Sale__c.Sale_Price__c</summarizedField>
    <summaryForeignKey>Journal_Sale__c.Journal_Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
    <description>Total amount customer has spent (rollup from Journal_Sale__c)</description>
</CustomField>